Replaced URI with URL